--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^1.42.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
