--- a/package.json
+++ b/package.json
@@ -17,7 +17,15 @@
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^1.42.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "firebase": "^9.16.0",
+    "react-phone-number-input": "^3.2.16",
+    "jwt-decode": "^3.1.2",
+    "react-router-dom": "^6.6.1",
+    "echarts": "^5.4.1",
+    "echarts-for-react": "^3.0.2",
+    "react-chartjs-2": "^5.2.0",
+    "chart.js": "^4.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
